# Charades

./: README.md
JavaFX-Client/src/sample/: ConnectionService.java  Controller.java  DrawingController.java  Main.java  sample.fxml
JavaFX-Client/src/sample/Model/: HeaderType.java  Headers.java  Message.java
android_client/app/: build.gradle
android_client/app/src/main/: AndroidManifest.xml
android_client/app/src/main/res/drawable/: layout_bg.xml
android_client/app/src/main/res/layout/: activity_game.xml  activity_main.xml  activity_statistics.xml  activity_table_selection.xml  message.xml  table_button.xml
android_client/gradle/wrapper/: gradle-wrapper.properties
cpp_client/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cpp_client_automoc.cpp  exe  moc_Window.cpp
cpp_client/cpp_client_autogen/: mocs_compilation.cpp
cpp_client/cpp_client_autogen/2MJGWJB4P3/: moc_Controller.cpp  moc_MainWindow.cpp  moc_Worker.cpp
cpp_client/cpp_client_autogen/CZW3SENOM5/: moc_Worker.cpp
cpp_client/cpp_client_autogen/GCMOS6KRRZ/: moc_DrawScene.cpp  moc_DrawView.cpp  moc_MainWindow.cpp
cpp_client/src/: main.cpp
cpp_client/src/client/: Consts.h  MainWindow.cpp  MainWindow.h  Message.cpp  Message.h  Worker.cpp  client.cpp  client.h
cpp_client/src/client/Backend/: Message.cpp  Message.h  Worker.cpp  Worker.h  client.cpp  client.h
cpp_client/src/client/Connection/: Message.cpp  Message.h  Worker.cpp  Worker.h  client.cpp  client.h
cpp_client/src/client/Controller/: Controller.cpp  Controller.h
cpp_client/src/client/UI/: ChangeTableDialog.cpp  ChangeTableDialog.h  DrawScene.cpp  DrawScene.h  DrawView.cpp  DrawView.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  MessageBox.cpp  MessageBox.h
server/: .gitignore  Makefile  README.md
server/data/: words.txt
server/src/: main.cpp
server/src/server/: Command.cpp  Command.h  GlobalData.cpp  GlobalData.h  Interpreter.cpp  Interpreter.h  Server.cpp  Server.h  Table.cpp  Table.h  TableData.cpp  TableData.h  TableMgmt.cpp  TableMgmt.h  Tables.cpp  Tables.h  User.cpp  User.h
server/src/server/commands/: ComeOutTableCmd.cpp  ComeOutTableCmd.h  Command.cpp  Command.h  CreateTableCmd.cpp  CreateTableCmd.h  EnterTableCmd.cpp  EnterTableCmd.h  GetStatisticCmd.cpp  GetStatisticCmd.h  GiveUpCmd.cpp  GiveUpCmd.h  HelloCmd.cpp  HelloCmd.h  Helpers.cpp  Helpers.h  ListTables.cpp  ListTablesCmd.h  PongCmd.cpp  PongCmd.h  SendMessageCmd.cpp  SendMessageCmd.h  SetCanvasCmd.cpp  SetCanvasCmd.h
(+14 files in other folders)
